{
    "version": 1,
    "name": "MarioActions",
    "maps": [
        {
            "name": "MarioMovement",
            "id": "6a8532f2-4af4-4774-80bb-560a21752837",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "d34829a4-d3d8-46b1-9da1-6ae5a92bb22e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2d76f7ce-1cdc-4cad-8372-e6934e53fb3f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashRight",
                    "type": "Button",
                    "id": "118aa982-1e9e-4a4d-9982-1d6334350789",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DashLeft",
                    "type": "Button",
                    "id": "10df2008-e2c8-4ef5-8f5e-268f03309bd7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3b11ff06-37e9-4178-b73b-179dacff69ea",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Down",
                    "id": "7f92209f-020a-42fb-bafe-e2a11704581c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Up",
                    "id": "748eced8-0da7-4070-8ba5-f9ca864627f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "702c391c-461b-4091-932b-138d9482bf0d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "7977ac57-1f55-40a0-a081-ae71d519aeda",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6a3252c1-2fbd-4bc7-9776-3c2a553ca610",
                    "path": "<Keyboard>/space",
                    "interactions": "Tap,Hold",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "46eed513-ce47-444d-8f73-74cc4463ab2d",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0758730b-ba2b-438a-b02a-93c617f6c992",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "DashRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "4a4de43e-db87-4aab-8cd4-b175f070eabd",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "DashRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "24340f15-53d3-49da-ba8b-53620091f94b",
                    "path": "<Keyboard>/d",
                    "interactions": "Press,MultiTap(tapTime=0.17,tapDelay=0.3,tapCount=1)",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "DashRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "9a525cc5-9aec-4170-8a08-87ab4df384f6",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "bf9b05f6-2860-4937-8dc9-6c7e3331a83d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "DashLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "465ff97d-ae34-4f7f-be2f-d2b64193cf5d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "DashLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "92589501-edcb-4cb3-930d-caa3d3206c8e",
                    "path": "<Keyboard>/a",
                    "interactions": "Press,MultiTap(tapTime=0.17,tapDelay=0.3,tapCount=1)",
                    "processors": "",
                    "groups": ";Keyboard & Mouse",
                    "action": "DashLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}